--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "blade-ui-kit/blade-heroicons": "^2.4",
         "danog/madelineproto": "^8.3",
         "laravel/framework": "^11.9",
         "laravel/octane": "^2.5",
