--- a/.env.example
+++ b/.env.example
@@ -21,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mariadb
+DB_HOST=172.18.112.1
+DB_PORT=3306
+DB_DATABASE=telestorage
+DB_USERNAME=voiping
+DB_PASSWORD=Dragon_12369
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -64,3 +64,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+DB_DATABASE=telestorage
+DB_USERNAME=root
+
+OCTANE_SERVER=frankenphp
+
+TELEGRAM_API_ID=22692974
+TELEGRAM_API_HASH=a1e3cae3743e5b8bcd35fe58bb49b2eb
