--- a/.env.example
+++ b/.env.example
@@ -77,9 +77,15 @@ OCTANE_SERVER=frankenphp
 
 TELEGRAM_API_ID=
 TELEGRAM_API_HASH=
+
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_BOT_USERNAME=
 TELEGRAM_BOT_NAME=
+TELEGRAM_BOT_DEFAULT_SESSION_NAME==telegram_bot_session
 
-SUPERADMIN_USERNAME=
-SUPERADMIN_PASSWORD=
+SUPERADMIN_NAME="Admin"
+SUPERADMIN_USERNAME="admin"
+SUPERADMIN_PASSWORD="admin"
+SUPERADMIN_EMAIL="admin@example.com"
+SUPERADMIN_PHONE_NUMBER=
+
