--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^11.9",
         "laravel/octane": "^2.5",
+        "laravel/reverb": "^1.4",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
